force-app/core/default/objects/XC_AFCC_Import_Run__c/XC_AFCC_Import_Run__c.object-meta.xml
<CustomObject>
    <label>Import Run</label>
    <nameField>
        <displayFormat>IR-{000000}</displayFormat>
        <label>XC AFCC Import Run</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>