force-app/core/default/objects/XC_AFCC_Import_Run__c/fields/XC_AFCC_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Completed_At__c</fullName>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>