force-app/core/default/objects/XC_AFCC_Import_Run__c/fields/XC_AFCC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>