force-app/core/default/objects/XC_AFCC_Import_Run__c/fields/XC_AFCC_File_Name__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>