force-app/core/default/objects/XC_AFCC_Import_Run__c/fields/XC_AFCC_Import_Type__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Import_Type__c</fullName>
    <label>Import Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>NATIVE_SYNC</fullName>
                <label>Native Sync</label>
            </value>
            <value>
                <fullName>MANUAL</fullName>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>