force-app/core/default/objects/XC_AFCC_Import_Run__c/fields/XC_AFCC_Status__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>RUNNING</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>COMPLETED_WITH_ERRORS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>