force-app/core/default/objects/XC_AFCC_Import_Run__c/fields/XC_AFCC_Success_Count__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Success_Count__c</fullName>
    <label>Success Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>